--- a/links/templates/newuser.html
+++ b/links/templates/newuser.html
@@ -45,6 +45,7 @@
                 </div>
         </div>
 
+
         <br>
         <div class="row">
           <div class="col-md-3"></div>
@@ -61,6 +62,8 @@
                   <div class="col-md-3">
                     <input class="vTextField form-control required" type="password" id="pass" name="password" minlength="8" maxlength="254" required>
                   </div>
+          </div>
+        <br>
 				  <div class="row">
             <div class="col-md-3"></div>
                 <div class="col-md-2"><label class="inline">uczelnia:</label></div>
@@ -84,7 +87,7 @@
                     <input class="vTextField form-control required" type="kierunek" id="kierunek" name="kierunek" minlength="8" maxlength="254" required>
                   </div>
           </div>
-          </div>
+          </form></div>
         <br>
         <div class="row">
           <div class="col-md-7"></div>
