--- a/links/templates/registration/login.html
+++ b/links/templates/registration/login.html
@@ -1,64 +1,138 @@
-{% extends 'admin/login.html' %}
-{% load i18n %}
-{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+    <style>
+        /* Bordered form */
+table {
+  padding: 20px;
+
+}
+*{
+    font-family: 'Lato', sans-serif;
+  text-align: center;
+}
+p{
+  font-size:30px
+}
+/* Full-width inputs */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+  background-color: darkcyan;
+  color: white;
+  padding: 14px 30px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+
+}
+
+/* Add a hover effect for buttons */
+button:hover {
+  opacity: 0.8;
+}
+
+
+/* Add padding to containers */
+.content-section{
+  padding: 100px;
+
+}
+tbody{
+}
+/* The "Forgot password" text */
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+.child {
+  border: 8px solid darkcyan;
+  background-color: white;
+  margin: 0 auto;
+}
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+    display: block;
+    float: none;
+  }
+  .cancelbtn {
+    width: 100%;
+  }
+}
+    </style>
+
+    <meta charset="UTF-8">
+    <title>Strona logowania</title>
+</head>
+<body style="background: linear-gradient(to right, #0f2027, #203a43, #2c5364);";>
 
 {% block content %}
 
-    {% if form.errors and not form.non_field_errors %}
-        <p class="errornote">
-            {% if form.errors.items|length == 1 %}{% trans "Please correct the error below." %}{% else %}
-                {% trans "Please correct the errors below." %}{% endif %}
-        </p>
+  {% if form.errors %}
+    <p style = "color: red">Login bądź/i hasło są niepoprawne.</p>
+  {% endif %}
+
+  {% if next %}
+    {% if user.is_authenticated %}
+      <p>Jesteś już zalogowany, ale możesz się zalogować na inne konto.</p>
+    {% else %}
+      <p>Zaloguj się aby zobaczyć tą stronę.</p>
     {% endif %}
+  {% endif %}
+<a style="color: whitesmoke" href="/">Wróć do strony głównej</a>
+  <div class ="content-section">
 
-    {% if form.non_field_errors %}
-        {% for error in form.non_field_errors %}
-            <p class="errornote">
-                {{ error }}
-            </p>
-        {% endfor %}
-    {% endif %}
+    <form method="post" action="{% url 'login' %}">
+    {% csrf_token %}
+    <table class="child">
+      <p style="color: whitesmoke">Formularz logowania</p>
+      <tr>
+        <td>Nazwa użytkownika: </td>
+        <td >{{ form.username }}</td>
+      </tr>
+      <tr>
+        <td>Hasło: </td>
+        <td>{{ form.password }}</td>
+      </tr>
+      <tr>
+        <td colspan="2">
+            <button type="submit" value="login">Zaloguj się</button>
+            <input type="hidden" name="next" value="{{ next }}" />
+        </td></tr>
+      <tr>
+        <td><a style= "font-size:14px" href="{% url 'password_reset' %}">Zapomniałeś hasła?</a>
+        </td>
+        <td>
+          <a style= "font-size:14px" href="/new_user">Nie masz konta?</a>
+        </td>
+        <td>
 
-    <div id="content-main">
-        
+        </td>
+      </tr>
+      <tr>
+        <td></td>
+      </tr>
+    </table>
 
-        {% if user.is_authenticated %}
-            <p class="errornote">
-                {% blocktrans trimmed %}
-                    You are authenticated as {{ username }}, but are not authorized to
-                    access this page. Would you like to login to a different account?
-                {% endblocktrans %}
-            </p>
-        {% endif %}
+  </form>
+  </div>
+  {# Assumes you setup the password_reset view in your URLconf #}
 
-        <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
-            <div class="form-row{% if form.username.errors %} has-danger{% endif %}">
-                <input type="text" name="{{ form.username.html_name }}" id="{{ form.username.id_for_label }}"
-                       placeholder="{{ form.username.label }}" maxlength="254" value="{% if form.username.value %}{{ form.username.value }}{% endif %}" class="form-control form-control-lg">
-                {{ form.username.errors }}
-            </div>
-            <div class="form-row{% if form.password.errors %} has-danger{% endif %}">
-                <input type="password" name="{{ form.password.html_name }}" id="{{ form.password.id_for_label }}" placeholder="{{ form.password.label }}" class="form-control form-control-lg">
-                {{ form.password.errors }}
-                <input type="hidden" name="next" value="{{ next }}"/>
-            </div>
-            {% url 'admin_password_reset' as password_reset_url %}
-            {% if password_reset_url %}
-                <div class="password-reset-link">
-                    <a href="{{ password_reset_url }}">{% trans 'Forgotten your password or username?' %}</a>
-                </div>
-            {% endif %}
-            <div class="submit-row">
-                <label>&nbsp;</label><input type="submit" value="{% trans 'Log in' %}"/>
-            </div>
-        </form>
-        <br>
-        <div style="margin-left:80px;"> if it is your first visit click <a href="/new_user/">here</a></div>
-        <script type="text/javascript">
-            if(!document.getElementById('id_username').value)
-                document.getElementById('id_username').focus();
-            else
-                document.getElementById('id_password').focus();
-        </script>
-    </div>
+
 {% endblock %}
+
+
+</body>
+</html>
