--- a/links/templates/index.html
+++ b/links/templates/index.html
@@ -1,111 +1,85 @@
 <!doctype html>
-{% load static %}
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 
-<head>
-    <!--
-    /   Multipurpose: Free Template by FreeHTML5.co
-    /   Author: https://freehtml5.co
-    /   Facebook: https://facebook.com/fh5co
-    /   Twitter: https://twitter.com/fh5co
-    -->
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Document title -->
-    <title>Walrus Bay</title>
-    <!-- Stylesheets & Fonts -->
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i%7CRajdhani:400,600,700"
-        rel="stylesheet">
-    <!-- Plugins Stylesheets -->
-    <link rel="stylesheet" href="assets/css/loader/loaders.css">
-    <link rel="stylesheet" href="assets/css/font-awesome/font-awesome.css">
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/aos/aos.css">
-    <link rel="stylesheet" href="assets/css/swiper/swiper.css">
-    <link rel="stylesheet" href="assets/css/lightgallery.min.css">
-    <!-- Template Stylesheet -->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <!-- Responsive Stylesheet -->
-    <link rel="stylesheet" href="assets/css/responsive.css">
-</head>
-
-<body>
-
-    <!-- Header Start -->
-    <header class="position-fixed w-100">
-        <div class="container">
-            <nav class="navbar navbar-expand-md navbar-light">
-                <a class="navbar-brand" href="index.html"><img src="assets/images/nazwa.png" alt="Walrus Bay"></a>
-                <div class="group d-flex align-items-center">
-                    <button class="navbar-toggler" type="button" data-toggle="collapse"
-                        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation"><span
-                            class="navbar-toggler-icon"></span></button>
-
-                </div>
-                <a class="search-icon d-none d-md-block" href="#"><i class="fa fa-search"></i></a>
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="#">kategorie kursów</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">zarejestruj się</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#">zaloguj się</a></li>
-                    </ul>
-                    <form class="bg-white search-form" method="get" id="searchform">
-                        <div class="input-group">
-                            <input class="field form-control" id="s" name="s" type="text" placeholder="Search">
-                            <span class="input-group-btn">
-                                <input class="submit btn btn-primary" id="searchsubmit" name="submit" type="submit"
-                                    value="Search">
-                            </span>
-                        </div>
-                    </form>
-                </div>
-            </nav>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Walrus Bay</title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="static/css/style.css">
+    </head>
+    
+    <body>
+    <div id="container">
+    
+    <div class="header">
+      <a id="logo" href="index.html"><img src="static/images/nazwa.png" alt="Walrus Bay"></>
+      <div class="dropdown">
+          <button class="dropbtn">Kategorie kursów</button>
+          <div class="dropdown-content">
+            <a href="#">Matematyka</a>
+            <a href="#">Elektronika</a>
+            <a href="#">Programowanie</a>
+            <a href="#">Biologia</a>
+            <a href="#">Sygnały</a>
+          </div>
         </div>
-    </header>
-    <!-- Header End -->
-    <!-- Hero Start -->
-    <section class="hero">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 offset-md-1 col-md-11">
-                    <div class="swiper-container hero-slider">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide slide-content d-flex align-items-center">
-                                 <div class="single-slide">
-                                    <h1 data-aos="fade-center" data-aos-delay="300">kurs dnia
-                                    </h1>
-                                    <p data-aos="fade-right" data-aos-delay="600">programowanie 1
-                                    </p>
-                                    <a data-aos="fade-right" data-aos-delay="900" href="#" class="btn btn-primary">zobacz</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Add Control -->
-            <span class="arr-left"><i class="fa fa-angle-left"></i></span>
-            <span class="arr-right"><i class="fa fa-angle-right"></i></span>
-        </div>
-        <div class="texture"></div>
-        <div class="diag-bg"></div>
-    </section>
-    <!-- Hero End -->
-
-
-    <!--jQuery-->
-    <script src="assets/js/jquery-3.3.1.js"></script>
-    <!--Plugins-->
-    <script src="assets/js/bootstrap.bundle.js"></script>
-    <script src="assets/js/loaders.css.js"></script>
-    <script src="assets/js/aos.js"></script>
-    <script src="assets/js/swiper.min.js"></script>
-    <script src="assets/js/lightgallery-all.min.js"></script>
-    <!--Template Script-->
-    <script src="assets/js/main.js"></script>
-</body>
+        
+      <div class="header-right">
+        <a class="menu" href="newuser.html">Zarejestruj się</a>
+        <a class="menu" href="#zak">Zaloguj się</a>
+        <input type="text" placeholder="Szukaj..">
+      </div>
+    </div>
+    
+    <div id="content">
+    <br><br><br><br><br><br>
+    
+    <div class="slideshow-container">
+    
+    <div class="mySlides fade">
+        <div class="text">Zanurz się w świat nauki<br>z naszymi kursami</div>
+        <div class="button"><a href="newuser.html">Załóż konto</a></div>
+    </div>
+    
+    <div class="mySlides fade">
+        <div class="text">Kurs dnia:<br>Pola i fale</div>
+        <div class="button"><a href="kurs.html">Sprawdź</a></div>
+    </div>
+    
+    </div>
+    <br>
+    
+    <div style="text-align:center">
+      <span class="dot"></span> 
+      <span class="dot"></span>
+    </div>
+    
+    <script>
+    var slideIndex = 0;
+    showSlides();
+    
+    function showSlides() {
+      var i;
+      var slides = document.getElementsByClassName("mySlides");
+      var dots = document.getElementsByClassName("dot");
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";  
+      }
+      slideIndex++;
+      if (slideIndex > slides.length) {slideIndex = 1}    
+      for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex-1].style.display = "block";  
+      dots[slideIndex-1].className += " active";
+      setTimeout(showSlides, 5000); // Change image every 2 seconds
+    }
+    </script>
+    </div>
+    
+    </body>
 
 </html>
