--- a/links/templates/home.html
+++ b/links/templates/home.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 {% block content %}
 {% block extra_css %}
-<link href="{% static 'css/home.css' %}" rel="stylesheet" media="screen">
+<link href="{% static '/css/home.css' %}" rel="stylesheet" media="screen">
 {% endblock %}
 <section class="content">
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
